<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image"
        android:foreground="@drawable/login_image_foreground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/login_bg" />

    <LinearLayout
        android:id="@+id/overlayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overlay_layout_background"
        android:elevation="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:indeterminateTint="@color/primary_text_color_dark" />
    </LinearLayout>

    <TextView
        android:id="@+id/signInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dekko"
        android:text="@string/sign_in"
        android:textColor="@color/primary_text_color_dark"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputsLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/dekko"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:padding="2dp"
        android:text="@string/skip"
        android:textColor="@color/primary_text_color_dark"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/textInputsLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/dividerLinierLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="480dp">

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_shape"
            android:drawableStart="@drawable/ic_phone"
            android:ems="10"
            android:fontFamily="@font/dekko"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:shadowRadius="8"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dekko"
            android:text="@string/sign_in"
            app:cornerRadius="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dividerLinierLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/optionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/leftDivider"
            android:layout_width="75dp"
            android:layout_height="2dp"
            android:layout_marginStart="48dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/orLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/dekko"
            android:letterSpacing="0.2"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/rightDivider"
            android:layout_width="75dp"
            android:layout_height="2dp"
            android:layout_marginEnd="48dp"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/socialBtnLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dekko"
            android:gravity="center"
            android:text="@string/sign_in_with"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/socialBtnLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/privacyTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/facebookLoginButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:drawableLeft="@drawable/ic_fb"
            android:fontFamily="@font/dekko"
            android:letterSpacing="0.1"
            android:text="@string/facebook"
            android:textSize="12sp"
            app:cornerRadius="8dp" />


        <Button
            android:id="@+id/googleLoginButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawableLeft="@drawable/ic_google"
            android:fontFamily="@font/dekko"
            android:letterSpacing="0.1"
            android:text="@string/google"
            android:textSize="12sp"
            app:cornerRadius="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacyTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/warning_message_regarding_terms"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/terms"
            android:textColor="@color/purple_200"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/and"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/conditionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/conditions"
            android:textColor="@color/purple_200"
            android:textSize="10sp" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottomSheetCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/verification_bottom_sheet_view" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>